# jnum

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  copyright.md  jnumConfig.cmake.in  readme.md
cmake/configure/: jnumConfig.cmake.in
cmake/include/: install.cmake  test-dependency.cmake  test-external.cmake
include/jnum/detail/: array.hpp  traits.hpp
scripts/: jnum.py
share/: loglevel.hpp  loglevel.jnum
share/jnum/: jnumCodeGen.cmake
src/include/jnum/: jnum.hpp
src/include/jnum/detail/: array.hpp
src/lib/: CMakeLists.txt
test/: CMakeLists.txt
test/include/testjnum/: testjnum.hpp
test/jnum/test_jnum/: encoding.jnum
test/lib/: CMakeLists.txt
utils/citools/linux/: ci  local_ci
utils/devtools/: changelog  clang-tidy  setup.sh
